# varmlen

./: .gitignore  LICENSE  NOTICE  README.md  WINDOWS-PORT.md  package-lock.json  package.json  varmlen.desktop
helper/: Cargo.toml  aegis-setcap.sh  aegisvpn-helper.service  uninstall.sh  varmlen-setcap.sh
helper/src/: main.rs
scripts/: cross-build-windows.sh  fetch-windows-bins.sh  fetch-xray.sh
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  core.rs  lib.rs  main.rs  mobile_vpn.rs  singbox.rs  split.rs  subscription.rs  vpn.rs  xray.rs
src/lib/: api.ts  conn.svelte.ts  core.svelte.ts  i18n.svelte.ts  nav.ts  settings.svelte.ts  split.svelte.ts  subs.svelte.ts  theme.svelte.ts
src/lib/components/: Dropdown.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/rules/: +page.svelte
src/routes/servers/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/split/: +page.svelte
