[package]
name = "aegis-probe"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Small setcap'd helper for AegisVPN: tunnel-bypass latency probes, killswitch, TUN cleanup"

[[bin]]
name = "aegis-probe"
path = "src/main.rs"

[dependencies]
libc = "0.2"
# SO_MARK + SO_BINDTODEVICE for probes that must bypass sing-box's TUN /
# auto_redirect nftables fast-path (catches by destination, not source IP).
socket2 = { version = "0.5", features = ["all"] }
