[package]
name = "varmlen-probe"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Small setcap'd helper for Varmlen: tunnel-bypass latency probes, killswitch, TUN cleanup"

[[bin]]
name = "varmlen-probe"
path = "src/main.rs"

[dependencies]
libc = "0.2"
# SO_MARK + SO_BINDTODEVICE for probes that must bypass the tun (traffic routes
# into the tun by destination, so a plain source bind isn't enough).
socket2 = { version = "0.5", features = ["all"] }
# Raise CAP_NET_ADMIN into the ambient set so the `ip`/`nft` child processes we
# spawn inherit it — file capabilities alone do NOT propagate across execve.
caps = "0.5"
