[package]
name = "aegisvpn"
version = "0.1.0"
description = "AegisVPN — open-source sing-box client with per-app and per-domain split tunneling"
authors = ["AegisVPN contributors"]
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aegisvpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
percent-encoding = "2"
base64 = "0.22"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
flate2 = "1"
tar = "0.4"
# xray-core ships its release binary in a .zip (unlike sing-box's tar.gz).
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# File picker via the XDG desktop portal — shows the user's own DE file manager
# dialog (with proper search). Cross-desktop, not GNOME-specific.
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
# Used by the location-ping feature to source-bind TCP probes to the user's
# physical interface, so latencies reflect the real network even when the VPN
# tunnel is up (otherwise pings would route through the active server).
socket2 = "0.5"
libc = "0.2"

